Bug 256252 ctrl+right arrow sometimes skip a word r/sr=roc, patch=ginn.chen@sun.com